[package]
name = "regenesis_encoding"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0.27"
fuel-chain-config = "0.15.3"
fuel-core-types = "0.20.5"
fuel-types = "0.38.0"
hex = "0.4.3"
humansize = "2.1.3"
humantime = "2.1.0"
itertools = "0.11.0"
linregress = "0.5.3"
rand = "0.8.5"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
serde_with = "3.3.0"
tempfile = "3.8.0"
